update recall method

--- a/NCF-EWC.ipynb
+++ b/NCF-EWC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 108,
    "metadata": {
     "collapsed": true
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 109,
    "outputs": [],
    "source": [
     "class NCF_EWC(nn.Module):\n",
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 109,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 109,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 110,
    "outputs": [],
    "source": [
     "import torch\n",
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 111,
    "outputs": [],
    "source": [
     "# 데이터 로드\n",
@@ -164,13 +164,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 112,
    "outputs": [
     {
      "data": {
       "text/plain": "5"
      },
-     "execution_count": 64,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 113,
    "outputs": [],
    "source": [
     "class MovielensDataset(Dataset):\n",
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 114,
    "outputs": [],
    "source": [
     "# NCF 모델\n",
@@ -270,13 +270,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 115,
    "outputs": [
     {
      "data": {
       "text/plain": "device(type='cuda')"
      },
-     "execution_count": 67,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 116,
    "outputs": [],
    "source": [
     "def train(model, device, train_loader, optimizer, epoch):\n",
@@ -353,10 +353,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 117,
    "outputs": [],
    "source": [
     "def recall_at_k(output, target, k):\n",
+    "    if len(output) < k:\n",
+    "        k = len(output)\n",
     "    _, idx = torch.topk(output, k=k)\n",
     "    hit = torch.sum(target[idx])\n",
     "    return hit.float() / target.sum().float() if target.sum().float() else torch.Tensor([0])\n",
@@ -429,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 118,
    "outputs": [],
    "source": [
     "### Config..\n",
@@ -441,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 119,
    "outputs": [],
    "source": [
     "def getNaiveResultByScenario(scenario):\n",
@@ -585,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 120,
    "outputs": [
     {
      "name": "stdout",
@@ -598,14 +600,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:10<00:00, 10.57s/it]\n"
+      "100%|██████████| 1/1 [00:09<00:00,  9.27s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "******* At 0 TASK recall20 = 0.35636266812004824\n",
+      "******* At 0 TASK recall20 = 0.33391758968884294\n",
       "\n",
       "************** Train Start At TASK1\n"
      ]
@@ -614,14 +616,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:01<00:00,  1.03s/it]\n"
+      "100%|██████████| 1/1 [00:00<00:00,  1.17it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "******* At 1 TASK recall20 = 0.37919910124650125\n",
+      "******* At 1 TASK recall20 = 0.3523081104186448\n",
       "\n",
       "************** Train Start At TASK2\n"
      ]
@@ -630,14 +632,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:01<00:00,  1.03s/it]\n"
+      "100%|██████████| 1/1 [00:00<00:00,  1.15it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "******* At 2 TASK recall20 = 0.3290605235746817\n",
+      "******* At 2 TASK recall20 = 0.3669632251063983\n",
       "\n",
       "************** Train Start At TASK3\n"
      ]
@@ -646,88 +648,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:01<00:00,  1.04s/it]\n"
+      "100%|██████████| 1/1 [00:00<00:00,  1.16it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "******* At 3 TASK recall20 = 0.4011660469205756\n",
+      "******* At 3 TASK recall20 = 0.3136576861143112\n",
       "\n",
-      "avg recall : 0.3664470849654517\n",
-      "************** Train Start At TASK0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1/1 [00:09<00:00,  9.89s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "******* At 0 TASK recall20 = 0.37070729555985465\n",
-      "\n",
-      "************** Train Start At TASK1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1/1 [00:00<00:00,  6.37it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "******* At 1 TASK recall20 = 0.37151702493429184\n",
-      "\n",
-      "************** Train Start At TASK2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1/1 [00:00<00:00,  7.04it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "******* At 2 TASK recall20 = 0.3666736751794815\n",
-      "\n",
-      "************** Train Start At TASK3\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1/1 [00:00<00:00,  6.41it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "******* At 3 TASK recall20 = 0.3045223206281662\n",
-      "\n",
-      "avg recall : 0.35335507907544855\n"
+      "avg recall : 0.3417116528320493\n"
      ]
     }
    ],
    "source": [
-    "naiveIncrease = getNaiveResultByScenario(\"increase\")\n",
-    "naivefixed = getNaiveResultByScenario(\"fixed\")\n",
-    "# naiveUser = getNaiveResultByScenario(\"user\")\n",
+    "# naiveIncrease = getNaiveResultByScenario(\"increase\")\n",
+    "# naivefixed = getNaiveResultByScenario(\"fixed\")\n",
+    "naiveUser = getNaiveResultByScenario(\"user\")\n",
     "# naiveItem = getNaiveResultByScenario(\"item\")"
    ],
    "metadata": {
@@ -736,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 120,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -745,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 120,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -754,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 120,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -786,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 121,
    "outputs": [],
    "source": [
     "# # EWC에 필요한 변수\n",
@@ -800,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 122,
    "outputs": [],
    "source": [
     "# Task가 끝날 때 마다 optpar와 fisher를 저장해주는 함수.\n",
@@ -830,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 123,
    "outputs": [],
    "source": [
     "# EWC를 적용한 train 함수\n",
@@ -867,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 124,
    "outputs": [],
    "source": [
     "def getEWCResultByScenario(scenario):\n",
@@ -939,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 125,
    "outputs": [
     {
      "name": "stdout",
@@ -952,14 +889,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:09<00:00,  9.23s/it]\n"
+      "100%|██████████| 1/1 [00:09<00:00,  9.07s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "******* At 0 TASK recall20 = 0.38138821602545003\n",
+      "******* At 0 TASK recall20 = 0.34493666332723066\n",
       "\n",
       "************** Train Start At TASK1\n"
      ]
@@ -968,14 +905,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:01<00:00,  1.17s/it]\n"
+      "100%|██████████| 1/1 [00:00<00:00,  1.09it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "******* At 1 TASK recall20 = 0.38527182999410126\n",
+      "******* At 1 TASK recall20 = 0.37940335905913153\n",
       "\n",
       "************** Train Start At TASK2\n"
      ]
@@ -984,14 +921,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:01<00:00,  1.18s/it]\n"
+      "100%|██████████| 1/1 [00:01<00:00,  1.07s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "******* At 2 TASK recall20 = 0.366944252562366\n",
+      "******* At 2 TASK recall20 = 0.3440535729468772\n",
       "\n",
       "************** Train Start At TASK3\n"
      ]
@@ -1000,88 +937,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:01<00:00,  1.28s/it]\n"
+      "100%|██████████| 1/1 [00:01<00:00,  1.08s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "******* At 3 TASK recall20 = 0.3890757945023085\n",
+      "******* At 3 TASK recall20 = 0.3982979605595271\n",
       "\n",
-      "avg recall : 0.3806700232710564\n",
-      "************** Train Start At TASK0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1/1 [00:09<00:00,  9.28s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "******* At 0 TASK recall20 = 0.3399314369413663\n",
-      "\n",
-      "************** Train Start At TASK1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1/1 [00:00<00:00,  6.41it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "******* At 1 TASK recall20 = 0.3135371431708336\n",
-      "\n",
-      "************** Train Start At TASK2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1/1 [00:00<00:00,  5.85it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "******* At 2 TASK recall20 = 0.30569327995181084\n",
-      "\n",
-      "************** Train Start At TASK3\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1/1 [00:00<00:00,  4.67it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "******* At 3 TASK recall20 = 0.32829980105161666\n",
-      "\n",
-      "avg recall : 0.32186541527890683\n"
+      "avg recall : 0.36667288897319167\n"
      ]
     }
    ],
    "source": [
-    "ewcIncrease = getEWCResultByScenario(\"increase\")\n",
-    "ewcfixed = getEWCResultByScenario(\"fixed\")\n",
-    "# ewcUser = getEWCResultByScenario(\"user\")\n",
+    "# ewcIncrease = getEWCResultByScenario(\"increase\")\n",
+    "# ewcfixed = getEWCResultByScenario(\"fixed\")\n",
+    "ewcUser = getEWCResultByScenario(\"user\")\n",
     "# ewcItem = getEWCResultByScenario(\"item\")"
    ],
    "metadata": {
@@ -1090,19 +962,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 126,
    "outputs": [
     {
      "data": {
-      "text/plain": "0.3806700232710564"
+      "text/plain": "0.3417116528320493"
      },
-     "execution_count": 80,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ewcIncrease"
+    "naiveUser"
    ],
    "metadata": {
     "collapsed": false
@@ -1110,19 +982,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 127,
    "outputs": [
     {
      "data": {
-      "text/plain": "0.3664470849654517"
+      "text/plain": "0.36667288897319167"
      },
-     "execution_count": 81,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "naiveIncrease"
+    "ewcUser"
    ],
    "metadata": {
     "collapsed": false
@@ -1130,25 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 125,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -1218,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 125,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -1227,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 125,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -1236,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 125,
    "outputs": [],
    "source": [],
    "metadata": {
