--- a/MGCCF.ipynb
+++ b/MGCCF.ipynb
@@ -325,7 +325,7 @@
     "        # xavier init\n",
     "        initializer = nn.init.xavier_uniform_\n",
     "\n",
-    "        embedding_dict = nn.ParameterDict({\n",
+    "        self.embedding_dict = nn.ParameterDict({\n",
     "            'user_emb': nn.Parameter(initializer(torch.empty(self.n_user,\n",
     "                                                 self.emb_size))),\n",
     "            'item_emb': nn.Parameter(initializer(torch.empty(self.n_item,\n",
@@ -333,20 +333,35 @@
     "        })\n",
     "        \n",
     "        #init the paramenter\n",
-    "        weight_dict = nn.ParameterDict()\n",
+    "        self.user_weight_dict = nn.ParameterDict()\n",
     "        layers = [self.emb_size] + self.layers\n",
     "        for k in range(len(self.layers)):\n",
-    "            weight_dict.update({'W_gc_%d'%k: nn.Parameter(initializer(torch.empty(layers[k],\n",
+    "            self.user_weight_dict.update({'W_gc_%d'%k: nn.Parameter(initializer(torch.empty(layers[k],\n",
     "                                                                      layers[k+1])))})\n",
-    "            weight_dict.update({'b_gc_%d'%k: nn.Parameter(initializer(torch.empty(1, layers[k+1])))})\n",
-    "\n",
-    "            weight_dict.update({'W_ag_%d'%k: nn.Parameter(initializer(torch.empty(layers[k],\n",
+    "            # Aggregation layer weight(Q)\n",
+    "            self.user_weight_dict.update({'W_ag_%d'%k: nn.Parameter(initializer(torch.empty(layers[k],\n",
     "                                                                      layers[k+1])))})\n",
-    "            weight_dict.update({'b_ag_%d'%k: nn.Parameter(initializer(torch.empty(1, layers[k+1])))})\n",
+    "        \n",
+    "        self.item_weight_dict = nn.ParameterDict()\n",
+    "        layers = [self.emb_size] + self.layers\n",
+    "        for k in range(len(self.layers)):\n",
+    "            self.item_weight_dict.update({'W_gc_%d'%k: nn.Parameter(initializer(torch.empty(layers[k],\n",
+    "                                                                      layers[k+1])))})\n",
+    "            # Aggregation layer weight(Q)\n",
+    "            self.item_weight_dict.update({'W_ag_%d'%k: nn.Parameter(initializer(torch.empty(layers[k],\n",
+    "                                                                      layers[k+1])))})\n",
     "\n",
-    "        return embedding_dict, weight_dict\n",
+    "        return self.embedding_dict, self.user_weight_dict, self.item_weight_dict\n",
     "    \n",
-    "    def "
+    "    def Item_aggregator(self,k,input,samplingsize,adj):\n",
+    "        rand_mat = torch.rand(5, 5)\n",
+    "        pass\n",
+    "    def User_aggregator(self,k,input,samplingsize,adj):\n",
+    "        pass\n",
+    "    def Item_convolution(self,k,adj):\n",
+    "        pass\n",
+    "    def User_convolution(self,k,adj):\n",
+    "        pass"
    ]
   },
   {
