--- a/MGCCF.ipynb
+++ b/MGCCF.ipynb
@@ -308,14 +308,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.nn as nn\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch.nn as nn\n",
-    "class MMGCF(nn.Module):\n",
+    "\n",
+    "class MGCCF(nn.Module):\n",
     "    def __init__(self, data):\n",
-    "        super(MMGCF, self).__init__()\n",
+    "        super(MGCCF, self).__init__()\n",
     "        self.n_user = data.num_user_node\n",
     "        self.n_item = data.num_item_node\n",
     "        self.emb_size = config['emb_size']\n",
@@ -354,7 +363,7 @@
     "        return self.embedding_dict, self.user_weight_dict, self.item_weight_dict\n",
     "    \n",
     "    def Item_aggregator(self,k,input,samplingsize,adj):\n",
-    "        rand_mat = torch.rand(5, 5)\n",
+    "        \n",
     "        pass\n",
     "    def User_aggregator(self,k,input,samplingsize,adj):\n",
     "        pass\n",
