--- a/MGCCF.ipynb
+++ b/MGCCF.ipynb
@@ -156,154 +156,197 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import scipy.sparse as sp\n",
-    "import torch\n",
-    "from torch.utils.data import Dataset, DataLoader, random_split\n",
-    "\n",
-    "\n",
-    "class Gowalla(object):\n",
-    "    \"\"\"\n",
-    "    To load the Gowalla data\n",
-    "    Current Version could be used as abstrct class after\n",
-    "    Gowalla only contains\n",
-    "    edge : \"user\", \"item\", \"timestamp\"\n",
-    "    \"\"\"\n",
-    "    def __init__(self):\n",
-    "        super(Gowalla,self).__init__()\n",
-    "    \n",
-    "\n",
-    "    def load_data(self, path, User_feature_path = None, Item_feature_path = None):\n",
-    "        \"\"\" \n",
-    "        Load the data from file path\n",
-    "        Parameter:\n",
-    "        train_path : str => file path for train data set\n",
-    "        test_path : str => file path for test data set\n",
-    "        User_feature_path : str , default = None => file path for user data \n",
-    "        Item_feature_path : str , default = None => file path for item data \n",
-    "        \"\"\"\n",
-    "        if os.path.exists(path):\n",
-    "            self.edges = pd.read_table(path, names=[\"user\",\"item\",\"timestamp\"], sep=\" \",dtype={'user':np.int64,'item':np.int64})\n",
-    "            self.num_user_node = len(self.edges['user'].unique())\n",
-    "            self.num_item_node = len(self.edges['item'].unique())\n",
-    "            print(f\"User node : {self.num_user_node}\\n \\\n",
-    "                  Item node : {self.num_item_node}\\n \\\n",
-    "                  edges : {len(self.edges)}\")\n",
-    "        else:\n",
-    "            FileNotFoundError(f\"There are No train data in {path}\")\n",
-    "\n",
-    "        if User_feature_path != None:\n",
-    "            if os.path.exists(User_feature_path):\n",
-    "                self.user_feature = pd.read_table(User_feature_path)\n",
-    "            else:\n",
-    "                FileNotFoundError(f\"There are No user feature data in {User_feature_path}\")\n",
-    "        else:\n",
-    "            User_feature_path = None\n",
-    "        if Item_feature_path != None:\n",
-    "            if os.path.exists(Item_feature_path):\n",
-    "                self.item_feature = pd.read_table(Item_feature_path)\n",
-    "            else:\n",
-    "                FileNotFoundError(f\"There are No user feature data in {Item_feature_path}\")\n",
-    "        else:\n",
-    "            Item_feature_path = None\n",
-    "        self.get_adj_matrix()\n",
-    "        return self.edges\n",
-    "    \n",
-    "    def get_adj_matrix(self):\n",
-    "        adj_M = sp.coo_matrix((np.ones(len(self.edges)),(self.edges['user'],self.edges['item'])), dtype=np.float32)\n",
-    "        self.ui_matrix = adj_M\n",
-    "        self.iu_matrix = adj_M.transpose()\n",
-    "\n",
-    "\n",
-    "# class Gowalla(object):\n",
-    "#     \"\"\"\n",
-    "#     To load the Gowalla data\n",
-    "#     Current Version could be used as abstrct class after\n",
-    "#     Gowalla only contains\n",
-    "#     edge : \"user\", \"item\", \"timestamp\"\n",
-    "#     \"\"\"\n",
-    "#     def __init__(self):\n",
-    "#         super(Gowalla,self).__init__()\n",
-    "    \n",
-    "\n",
-    "#     def load_data(self, train_path, test_path, User_feature_path = None, Item_feature_path = None):\n",
-    "#         \"\"\" \n",
-    "#         Load the data from file path\n",
-    "#         Parameter:\n",
-    "#         train_path : str => file path for train data set\n",
-    "#         test_path : str => file path for test data set\n",
-    "#         User_feature_path : str , default = None => file path for user data \n",
-    "#         Item_feature_path : str , default = None => file path for item data \n",
-    "#         \"\"\"\n",
-    "#         if os.path.exists(train_path):\n",
-    "#             self.train_edges = pd.read_table(train_path, names=[\"user\",\"item\",\"timestamp\"], sep=\" \",dtype={'user':np.int64,'item':np.int64})\n",
-    "#             self.train_num_user_node = len(self.train_edges['user'].unique())\n",
-    "#             self.train_num_item_node = len(self.train_edges['item'].unique())\n",
-    "#             print(f\"User node : {self.train_num_user_node}\\n \\\n",
-    "#                   Item node : {self.train_num_item_node}\\n \\\n",
-    "#                   edges : {len(self.train_edges)}\")\n",
-    "#         else:\n",
-    "#             FileNotFoundError(f\"There are No train data in {train_path}\")\n",
-    "\n",
-    "#         if os.path.exists(test_path):\n",
-    "#             self.test_edges = pd.read_table(test_path, names=[\"user\",\"item\",\"timestamp\"], sep=\" \",dtype={'user':np.int64,'item':np.int64})\n",
-    "#             self.test_num_user_node = len(self.test_edges['user'].unique())\n",
-    "#             self.test_num_item_node = len(self.test_edges['item'].unique())\n",
-    "#             print(f\"User node : {self.test_num_user_node}\\n \\\n",
-    "#                   Item node : {self.test_num_item_node}\\n \\\n",
-    "#                   edges : {len(self.test_edges)}\")\n",
-    "#         else:\n",
-    "#             FileNotFoundError(f\"There are No test data in {test_path}\")\n",
-    "        \n",
-    "#         if User_feature_path != None:\n",
-    "#             if os.path.exists(User_feature_path):\n",
-    "#                 self.user_feature = pd.read_table(User_feature_path)\n",
-    "#             else:\n",
-    "#                 FileNotFoundError(f\"There are No user feature data in {User_feature_path}\")\n",
-    "#         else:\n",
-    "#             User_feature_path = None\n",
-    "#         if Item_feature_path != None:\n",
-    "#             if os.path.exists(Item_feature_path):\n",
-    "#                 self.item_feature = pd.read_table(Item_feature_path)\n",
-    "#             else:\n",
-    "#                 FileNotFoundError(f\"There are No user feature data in {Item_feature_path}\")\n",
-    "#         else:\n",
-    "#             Item_feature_path = None\n",
-    "#         self.get_adj_matrix()\n",
-    "#         return self.train_edges, self.test_edges \n",
-    "    \n",
-    "#     def get_adj_matrix(self):\n",
-    "#         train_adj_M = sp.coo_matrix((np.ones(len(self.train_edges)),(self.train_edges['user'],self.train_edges['item'])), dtype=np.float32)\n",
-    "#         test_adj_M = sp.coo_matrix((np.ones(len(self.train_edges)),(self.train_edges['user'],self.train_edges['item'])), dtype=np.float32)\n",
-    "#         self.train_ui_matrix = train_adj_M\n",
-    "#         self.train_iu_matrix = train_adj_M.transpose()\n",
-    "#         self.test_ui_matrix = test_adj_M"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "User node : 29858\n",
-      "                   Item node : 40988\n",
-      "                   edges : 821971\n"
+      "c:\\Users\\PC\\.conda\\envs\\Jupyter_Notebook\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
    "source": [
-    "data = Gowalla()\n",
-    "train = data.load_data('C:\\\\Users\\\\PC\\\\Desktop\\\\MGCCF\\\\data\\\\Gowalla\\\\train.data')"
+    "import os.path as osp\n",
+    "\n",
+    "import torch\n",
+    "import torch.nn.functional as F\n",
+    "from torch.nn import Embedding, Linear\n",
+    "\n",
+    "import torch_geometric.transforms as T\n",
+    "from torch_geometric.data import HeteroData\n",
+    "from torch_geometric.nn import SAGEConv\n",
+    "from torch_geometric.nn.conv.gcn_conv import gcn_norm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user</th>\n",
+       "      <th>item</th>\n",
+       "      <th>time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>4169</td>\n",
+       "      <td>2010-10-19T23:55:27Z</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>31533</td>\n",
+       "      <td>2010-10-18T22:17:43Z</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>29074</td>\n",
+       "      <td>2010-10-17T23:42:03Z</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2572</td>\n",
+       "      <td>2010-10-17T19:26:05Z</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>40979</td>\n",
+       "      <td>2010-10-16T18:50:42Z</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1027459</th>\n",
+       "      <td>29857</td>\n",
+       "      <td>13173</td>\n",
+       "      <td>2010-04-27T04:32:19Z</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1027460</th>\n",
+       "      <td>29857</td>\n",
+       "      <td>392</td>\n",
+       "      <td>2010-03-14T18:13:45Z</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1027461</th>\n",
+       "      <td>29857</td>\n",
+       "      <td>30837</td>\n",
+       "      <td>2010-03-13T03:29:55Z</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1027462</th>\n",
+       "      <td>29857</td>\n",
+       "      <td>10578</td>\n",
+       "      <td>2010-02-15T03:33:42Z</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1027463</th>\n",
+       "      <td>29857</td>\n",
+       "      <td>24374</td>\n",
+       "      <td>2010-02-13T07:49:03Z</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1027464 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          user   item                  time\n",
+       "0            0   4169  2010-10-19T23:55:27Z\n",
+       "1            0  31533  2010-10-18T22:17:43Z\n",
+       "2            0  29074  2010-10-17T23:42:03Z\n",
+       "3            0   2572  2010-10-17T19:26:05Z\n",
+       "4            0  40979  2010-10-16T18:50:42Z\n",
+       "...        ...    ...                   ...\n",
+       "1027459  29857  13173  2010-04-27T04:32:19Z\n",
+       "1027460  29857    392  2010-03-14T18:13:45Z\n",
+       "1027461  29857  30837  2010-03-13T03:29:55Z\n",
+       "1027462  29857  10578  2010-02-15T03:33:42Z\n",
+       "1027463  29857  24374  2010-02-13T07:49:03Z\n",
+       "\n",
+       "[1027464 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_table('C:\\\\Users\\\\PC\\\\Desktop\\\\MGCCF\\\\data\\\\Gowalla\\\\filtering_refactored.intr', sep=' ', names=['user','item','time'])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = HeteroData()\n",
+    "\n",
+    "data['user'].x = torch.tensor(df['user'].unique())\n",
+    "data['item'].x = torch.tensor(df['item'].unique())\n",
+    "\n",
+    "data['user', 'interact', 'item'].edge_index = torch.tensor([list(df['user']),list(df['item'])])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[    0,     0,     0,  ..., 29857, 29857, 29857],\n",
+       "        [ 4169, 31533, 29074,  ..., 30837, 10578, 24374]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Bipar_gcn():\n",
+    "    "
    ]
   },
   {
@@ -312,73 +355,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch.nn as nn\n"
+    "class MGE():\n",
+    "    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "class MGCCF(nn.Module):\n",
-    "    def __init__(self, data):\n",
-    "        super(MGCCF, self).__init__()\n",
-    "        self.n_user = data.num_user_node\n",
-    "        self.n_item = data.num_item_node\n",
-    "        self.emb_size = config['emb_size']\n",
-    "        self.layers = config['n_layers']\n",
-    "\n",
-    "    def init_weight(self):\n",
-    "        # xavier init\n",
-    "        initializer = nn.init.xavier_uniform_\n",
-    "\n",
-    "        self.embedding_dict = nn.ParameterDict({\n",
-    "            'user_emb': nn.Parameter(initializer(torch.empty(self.n_user,\n",
-    "                                                 self.emb_size))),\n",
-    "            'item_emb': nn.Parameter(initializer(torch.empty(self.n_item,\n",
-    "                                                 self.emb_size)))\n",
-    "        })\n",
-    "        \n",
-    "        #init the paramenter\n",
-    "        self.user_weight_dict = nn.ParameterDict()\n",
-    "        layers = [self.emb_size] + self.layers\n",
-    "        for k in range(len(self.layers)):\n",
-    "            self.user_weight_dict.update({'W_gc_%d'%k: nn.Parameter(initializer(torch.empty(layers[k],\n",
-    "                                                                      layers[k+1])))})\n",
-    "            # Aggregation layer weight(Q)\n",
-    "            self.user_weight_dict.update({'W_ag_%d'%k: nn.Parameter(initializer(torch.empty(layers[k],\n",
-    "                                                                      layers[k+1])))})\n",
-    "        \n",
-    "        self.item_weight_dict = nn.ParameterDict()\n",
-    "        layers = [self.emb_size] + self.layers\n",
-    "        for k in range(len(self.layers)):\n",
-    "            self.item_weight_dict.update({'W_gc_%d'%k: nn.Parameter(initializer(torch.empty(layers[k],\n",
-    "                                                                      layers[k+1])))})\n",
-    "            # Aggregation layer weight(Q)\n",
-    "            self.item_weight_dict.update({'W_ag_%d'%k: nn.Parameter(initializer(torch.empty(layers[k],\n",
-    "                                                                      layers[k+1])))})\n",
-    "\n",
-    "        return self.embedding_dict, self.user_weight_dict, self.item_weight_dict\n",
-    "    \n",
-    "    def Item_aggregator(self,k,input,samplingsize,adj):\n",
-    "        \n",
-    "        pass\n",
-    "    def User_aggregator(self,k,input,samplingsize,adj):\n",
-    "        pass\n",
-    "    def Item_convolution(self,k,adj):\n",
-    "        pass\n",
-    "    def User_convolution(self,k,adj):\n",
-    "        pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
