--- a/PyG_tut.ipynb
+++ b/PyG_tut.ipynb
@@ -79,8 +79,7 @@
     "                           [2, 1]], dtype=torch.long)\n",
     "x = torch.tensor([[-1], [0], [1]], dtype=torch.float)\n",
     "\n",
-    "data = Data(x=x, edge_index=edge_index.t().contiguous())\n",
-    "data"
+    "data = Data(x=x, edge_index=edge_index.t().contiguous())"
    ]
   },
   {
